# GitlabAuditor

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/scans/: full.rs  group.rs  mod.rs  shared.rs
