[package]
name = "gitlab_auditor"
authors = ["Rodet Nathan"]
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
colored = "3.0"
regex = "1.11"
